--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -38,7 +38,7 @@
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  background-color:#405061;
+  background-color:#553f5c;
   line-height: 1em;
   position: relative;
   left: -1px;
@@ -54,7 +54,7 @@ button {
   background-color: #eee;
   border: none;
   padding: 5px 10px;
-  border-radius: 4px;
+  border-radius: 1px;
   cursor: pointer;
   cursor: hand;
   font-family: Arial;
@@ -68,7 +68,7 @@ button.delete {
   position: relative;
   left: 194px;
   top: -32px;
-  background-color: gray !important;
+  background-color: #876F8E !important;
   color: white;
 }
 
